refactor: move i18n files to public folder and add movie detail translations

--- a/public/i18n/locales/es-es.json
+++ b/public/i18n/locales/es-es.json
@@ -38,7 +38,9 @@
     "watchOn": "Dónde Ver",
     "trailerButton": "Ver Tráiler",
     "tryAgainButton": "¿No es lo que buscabas? ¡Inténtalo de nuevo!",
-    "noStreamingInfo": "Información de streaming no disponible."
+    "noStreamingInfo": "Información de streaming no disponible.",
+    "justificationHeader": "Por Qué Es Tu Elección Perfecta",
+    "moreDetails": "Más Detalles"
   },
   "timeOfDay": {
     "morning": "esta mañana",
