--- a/public/i18n/locales/en-us.json
+++ b/public/i18n/locales/en-us.json
@@ -38,7 +38,9 @@
     "watchOn": "Where to Watch",
     "trailerButton": "Watch Trailer",
     "tryAgainButton": "Not quite? Try again!",
-    "noStreamingInfo": "Streaming info not available."
+    "noStreamingInfo": "Streaming info not available.",
+    "justificationHeader": "Why It's Your Perfect Pick",
+    "moreDetails": "More Details"
   },
   "timeOfDay": {
     "morning": "this morning",
