--- a/public/i18n/locales/es-es.json
+++ b/public/i18n/locales/es-es.json
@@ -14,6 +14,31 @@
     "errorDefault": "Ocurrió un error desconocido.",
     "errorFetchingRecommendation": "Lo siento, no pude encontrar una película en este momento. Por favor, inténtalo de nuevo."
   },
+  "auth": {
+    "login": "Iniciar Sesión",
+    "signup": "Registrarse",
+    "logout": "Cerrar Sesión",
+    "email": "Correo electrónico",
+    "password": "Contraseña",
+    "createAccount": "Crear Cuenta",
+    "noAccount": "¿No tienes cuenta? Regístrate",
+    "hasAccount": "¿Ya tienes cuenta? Inicia sesión",
+    "profileTitle": "Tu Perfil",
+    "preferencesTitle": "Tus Preferencias de Recomendación",
+    "startYear": "Recomendar películas desde este año en adelante",
+    "ageRating": "Calificación de edad máxima",
+    "save": "Guardar Preferencias",
+    "loggedInAs": "Sesión iniciada como {email}",
+    "ratings": {
+      "any": "Cualquiera"
+    },
+    "error": {
+      "emailInUse": "Este correo electrónico ya está en uso.",
+      "weakPassword": "La contraseña debe tener al menos 6 caracteres.",
+      "invalidCredential": "Correo electrónico o contraseña no válidos.",
+      "generic": "Ocurrió un error. Por favor, inténtalo de nuevo."
+    }
+  },
   "moodSelector": {
     "title": "¿Cómo te sientes {timeOfDay}?",
     "subtitle": "Toca un estado de ánimo para seleccionar, o arrastra para girar."
@@ -212,7 +237,7 @@
         },
         "family": {
           "0": { "optionA": "Historia de Trauma Generacional", "optionB": "Pieza de Memoria Cultural", "description": "Dolor heredado vs. reflexión coletiva." },
-          "1": { "optionA": "Coming-of-Age en Tiempos Difíciles", "optionB": "Drama Similar a una Fábula", "description": "Verdad dura vs. tristeza mágica." },
+          "1": { "optionA": "Coming-of-Age en Tiempos Difíceis", "optionB": "Drama Similar a una Fábula", "description": "Verdad dura vs. tristeza mágica." },
           "2": { "optionA": "Colapso Familiar Histórico", "optionB": "Drama de Reconciliación", "description": "Pérdida vs. reparación." }
         }
       }
