--- a/public/i18n/locales/pt-br.json
+++ b/public/i18n/locales/pt-br.json
@@ -29,6 +29,8 @@
     "ageRating": "Classificação etária máxima",
     "save": "Salvar Preferências",
     "loggedInAs": "Logado como {email}",
+    "signInWithGoogle": "Entrar com Google",
+    "orSeparator": "OU",
     "ratings": {
       "any": "Qualquer"
     },
