feat: add movie recommendation sharing functionality with shareable links

--- a/public/i18n/locales/en-us.json
+++ b/public/i18n/locales/en-us.json
@@ -73,6 +73,18 @@
     "justificationHeader": "Why It's Your Perfect Pick",
     "moreDetails": "More Details"
   },
+  "share": {
+    "title": "CinePick Recommendation: {movie}",
+    "buttonLabel": "Share Recommendation",
+    "linkCopied": "Link copied!",
+    "error": "Could not create share link.",
+    "page": {
+      "context": "Your friend was looking for a {subMood} film for a {occasion}. CinePick suggested:",
+      "cta": "Find Your Own Perfect Movie!",
+      "notFound": "Sorry, this recommendation could not be found.",
+      "loading": "Loading recommendation..."
+    }
+  },
   "timeOfDay": {
     "morning": "this morning",
     "afternoon": "this afternoon",
