--- a/public/i18n/locales/es-es.json
+++ b/public/i18n/locales/es-es.json
@@ -73,6 +73,18 @@
     "justificationHeader": "Por Qué Es Tu Elección Perfecta",
     "moreDetails": "Más Detalles"
   },
+  "share": {
+    "title": "Recomendación de CinePick: {movie}",
+    "buttonLabel": "Compartir Recomendación",
+    "linkCopied": "¡Enlace copiado!",
+    "error": "No se pudo crear el enlace para compartir.",
+    "page": {
+      "context": "Tu amigo/a buscaba una película {subMood} para una {occasion}. CinePick sugirió:",
+      "cta": "¡Encuentra Tu Propia Película Perfecta!",
+      "notFound": "Lo siento, no se pudo encontrar esta recomendación.",
+      "loading": "Cargando recomendación..."
+    }
+  },
   "timeOfDay": {
     "morning": "esta mañana",
     "afternoon": "esta tarde",
