--- a/public/i18n/locales/pt-br.json
+++ b/public/i18n/locales/pt-br.json
@@ -73,6 +73,18 @@
     "justificationHeader": "Por Que É a Sua Escolha Perfeita",
     "moreDetails": "Mais Detalhes"
   },
+  "share": {
+    "title": "Recomendação do CinePick: {movie}",
+    "buttonLabel": "Compartilhar Recomendação",
+    "linkCopied": "Link copiado!",
+    "error": "Não foi possível criar o link de compartilhamento.",
+    "page": {
+      "context": "Seu amigo(a) estava procurando um filme {subMood} para uma {occasion}. O CinePick sugeriu:",
+      "cta": "Encontre Seu Próprio Filme Perfeito!",
+      "notFound": "Desculpe, esta recomendação não foi encontrada.",
+      "loading": "Carregando recomendação..."
+    }
+  },
   "timeOfDay": {
     "morning": "esta manhã",
     "afternoon": "esta tarde",
