--- a/public/i18n/locales/pt-br.json
+++ b/public/i18n/locales/pt-br.json
@@ -69,6 +69,7 @@
     "watchOn": "Onde Assistir",
     "trailerButton": "Ver Trailer",
     "tryAgainButton": "Não é bem isso? Tente de novo!",
+    "shareButton": "Compartilhar",
     "noStreamingInfo": "Informação de streaming não disponível.",
     "justificationHeader": "Por Que É a Sua Escolha Perfeita",
     "moreDetails": "Mais Detalhes"
@@ -80,7 +81,8 @@
     "linkCopied": "Link copiado!",
     "error": "Não foi possível criar o link de compartilhamento.",
     "page": {
-      "context": "Seu amigo(a) estava procurando um filme {subMood} para uma {occasion}. O CinePick sugeriu:",
+      "contextWithName": "{name} estava procurando um filme {subMood} para sua noite de cinema. O CinePick sugeriu:",
+      "contextWithoutName": "Um amigo(a) estava procurando um filme {subMood} para sua noite de cinema. O CinePick sugeriu:",
       "notFound": "Desculpe, esta recomendação não foi encontrada.",
       "loading": "Carregando recomendação..."
     }
