feat: add support for displaying deprecated history items with visual indicator

--- a/public/i18n/locales/en-us.json
+++ b/public/i18n/locales/en-us.json
@@ -45,6 +45,9 @@
       "generic": "An error occurred. Please try again."
     }
   },
+  "history": {
+    "deprecatedItem": "This item is from a previous version and cannot be viewed."
+  },
   "moodSelector": {
     "title": "How are you feeling {timeOfDay}?",
     "subtitle": "Tap a mood to select, or drag to spin."
