feat: redesign taste onboarding with improved UI and new skip/don't know actions

--- a/public/i18n/locales/en-us.json
+++ b/public/i18n/locales/en-us.json
@@ -55,7 +55,7 @@
   },
   "tasteOnboarding": {
     "welcomeTitle": "Welcome to CinePick!",
-    "welcomeBody": "Tired of endless scrolling? To help us find your perfect movie in seconds, let's play a quick game to understand your unique taste.",
+    "welcomeBody": "Let's find your unique taste. Play a quick 'This or That' game with iconic movies. Your choices will teach our AI what you love, unlocking recommendations tailored just for you.",
     "welcomeButton": "Let's Play!",
     "gameTitle": "Film Showdown",
     "gameSubtitle": "Which movie do you prefer?",
