--- a/public/i18n/locales/es-es.json
+++ b/public/i18n/locales/es-es.json
@@ -55,7 +55,7 @@
   },
   "tasteOnboarding": {
     "welcomeTitle": "¡Te damos la bienvenida a CinePick!",
-    "welcomeBody": "¿Cansado/a de buscar sin parar? Para ayudarnos a encontrar tu película perfecta en segundos, juguemos un juego rápido para entender tus gustos únicos.",
+    "welcomeBody": "Descubramos tu gusto único. Juega una partida rápida de 'Esto o Aquello' con películas icónicas. Tus elecciones enseñarán a nuestra IA lo que te encanta, desbloqueando recomendaciones hechas a tu medida.",
     "welcomeButton": "¡Vamos a Jugar!",
     "gameTitle": "Duelo de Películas",
     "gameSubtitle": "¿Qué película prefieres?",
