--- a/public/i18n/locales/pt-br.json
+++ b/public/i18n/locales/pt-br.json
@@ -55,7 +55,7 @@
   },
   "tasteOnboarding": {
     "welcomeTitle": "Bem-vindo(a) ao CinePick!",
-    "welcomeBody": "Cansado(a) de rolar a tela sem parar? Para nos ajudar a encontrar o seu filme perfeito em segundos, vamos jogar um jogo rápido para entender o seu gosto único.",
+    "welcomeBody": "Vamos descobrir seu gosto único. Jogue um jogo rápido de 'Isto ou Aquilo' com filmes icônicos. Suas escolhas ensinarão à nossa IA o que você ama, liberando recomendações feitas sob medida para você.",
     "welcomeButton": "Vamos Jogar!",
     "gameTitle": "Batalha de Filmes",
     "gameSubtitle": "Qual filme você prefere?",
